[TEST] Add unit tests for ArmorStandEditorEditTool functionality and validation
Signed-off-by: Wolfieheart <xmakeitrain94@gmail.com>